[package]
name = "audioadapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "audio"]
std = []
audio = ["audio-core"]

[dependencies]
num-traits = "0.2.15"
rawsample = { git = "https://github.com/HEnquist/rawsample.git", branch = "simplified_next" }
paste = "1.0.12"
audio-core = { version = "0.2.0-alpha.4", optional = true }


[dev-dependencies]
criterion = "0.5"
audio = "0.2.0-alpha.4"

[[bench]]
name = "iteration"
harness = false
