[package]
name = "audioadapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "A library for making it easier to work with buffers of audio data"
license = "MIT"
repository = "https://github.com/HEnquist/audioadapter-rs"
keywords = ["audio", "buffer", "dsp", "sample", "pcm"]
categories = ["multimedia::audio"]
readme = "README.md"

[features]
default = ["std", "audio"]
std = []
audio = ["audio-core"]

[dependencies]
num-traits = "0.2.15"
rawsample = { git = "https://github.com/HEnquist/rawsample.git", branch = "simplified_next" }
paste = "1.0.12"
audio-core = { git = "https://github.com/udoprog/audio.git", optional = true }


[dev-dependencies]
criterion = "0.5"
audio = { git = "https://github.com/udoprog/audio.git" }

[[bench]]
name = "iteration"
harness = false
