[package]
name = "audioadapter"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "A library for making it easier to work with buffers of audio data"
license = "MIT"
repository = "https://github.com/HEnquist/audioadapter-rs"
keywords = ["audio", "buffer", "dsp", "sample", "pcm"]
categories = ["multimedia::audio"]
readme = "README.md"

[features]
default = ["std", "audio"]
std = []
audio = ["audio-core"]

[dependencies]
num-traits = "0.2.15"
paste = "1.0.12"
audio-core = { version = "0.2.0", optional = true }


[dev-dependencies]
criterion = "0.5"
audio = "0.2.0"

[[bench]]
name = "iteration"
harness = false
